--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -12,14 +12,12 @@ tasks:
   test:
     desc: Run automated tests
     cmds:
-      - echo "Add your logic here"
-      - exit 1
+      - go test
 
   secure:
     desc: Run automated security checks
     cmds:
-      - echo "Add your logic here"
-      - exit 1
+      - echo "TODO: Add security scans"
 
   deliver:
     desc: Deliver artifact
@@ -30,5 +28,4 @@ tasks:
   deploy:
     desc: Deploy project
     cmds:
-      - echo "Add your logic here"
-      - exit 1
+      - echo "N/A. This project doesn't deploy."
